# doors

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md  doors.desktop  flake.nix  meson.build  meson_options.txt  test_log_init_bounds.c
arch/: .gitingore  PKGBUILD  doors-session.target
bmsg/: bmsg.c
doorsctl/: doorsctl.c
examples/: README.md  bwmhkrc  bwmrc  doorshkrc  doorsrc
examples/arch/: doorshkrc  doorsrc
include/: animation.h  bezier.h  blur.h  config.h  copy_capture.h  cursor.h  effects.h  effects_backend.h  fallthrough.h  gesture.h  idle.h  idle_power.h  input.h  input_method.h  ipc.h  ipc_cmd.h  ipc_helpers.h  keyboard.h  launcher.h  layer.h  lock.h  master_stack.h  output.h  output_config.h  popup.h  realtime.h  render_unfocused.h  rule.h  scratchpad.h  screencopy.h  scroller.h  seat.h  server.h  spring.h  surface.h  tablet.h  tabs.h  text.h  tiling_drag.h  toplevel.h  (+5 more)
src/: animation.c  bezier.c  blur.c  config.c  copy_capture.c  cursor.c  effects.c  effects_gles2.c  effects_vk.c  gesture.c  idle.c  idle_power.c  input.c  input_method.c  ipc.c  ipc_cmd.c  ipc_helpers.c  ipc_subscribe.c  keyboard.c  launcher.c  layer.c  lock.c  log.c  main.c  master_stack.c  output.c  output_config.c  popup.c  realtime.c  render_unfocused.c  rule.c  scratchpad.c  screencopy.c  scroller.c  seat.c  server.c  spring.c  surface.c  tablet.c  tabs.c  (+8 more)
src/ipc_cmd/: actions.c  config.c  desktop.c  dispatch.c  env.c  hotkey.c  input.c  node.c  output.c  query.c  quit.c  rule.c  scratchpad.c  scroller.c  seat.c  wm.c
src/shaders/: border.frag  border_corner_mask.frag  embed.pl  meson.build
src/shaders/gles2/: blit.frag  blur_acrylic.frag  blur_box_h.frag  blur_box_v.frag  blur_gauss_h.frag  blur_gauss_v.frag  blur_kawase.frag  blur_mica.frag  blur_refraction.frag  border.frag  border_corner_mask.frag  color_helpers.glsl  effect_tex.vert  ext_blit.frag  grayscale.frag  invert.frag  nightlight.frag  sepia.frag  shadow.frag
src/shaders/vulkan/: blit.frag  blur_acrylic.frag  blur_box_h.frag  blur_box_v.frag  blur_gauss_h.frag  blur_gauss_v.frag  blur_kawase.frag  blur_mica.frag  blur_refraction.frag  border.frag  border_corner_mask.frag  color_helpers.glsl  effect_tex.vert  shadow.frag
